# pg_stat_sysinfo

./: .gitignore  Cargo.toml  README.md  control  pg_stat_sysinfo.control
.github/workflows/: ci.yaml  package-extension.yml
src/: cache_worker.rs  collector.rs  crate_info.rs  init.rs  lib.rs  nvidia_collector.rs  settings.rs  shmem_ring_buffer.rs
